--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <!-- Sidebar -->
       <ul class="sidebar navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="google.com">
+          <a class="nav-link" href="http://parking.fullerton.edu/parking/Maps.php">
 
             <i class="fas fa-fw fa-map"></i>
 
@@ -111,19 +111,19 @@
           </a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link" href="google.com">
+          <a class="nav-link" href="https://parking.fullerton.edu/parking/">
 
             <i class="fas fa-fw fa-ticket-alt"></i>
             <span>Permits</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="charts.html">
+          <a class="nav-link" href="http://parking.fullerton.edu/_documents/parking/RulesAndRegs.pdf">
             <i class="fas fa-fw fa-parking"></i>
             <span>CSUF Parking Rules</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="tables.html">
+          <a class="nav-link" href="http://parking.fullerton.edu/parking/ParkAndPay.php">
             <i class="fas fa-fw fa-dollar-sign"></i>
             <span>Park and Pay Lots</span></a>
         </li>
@@ -213,6 +213,8 @@
           </div>
           -->
           <!-- Area Chart Example-->
+
+          <!--
           <div class="card mb-3">
             <div class="card-header">
               <i class="fas fa-chart-area"></i>
@@ -222,8 +224,10 @@
             </div>
             <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
           </div>
+-->
 
           <!-- DataTables Example -->
+<!--
           <div class="card mb-3">
             <div class="card-header">
               <i class="fas fa-table"></i>
@@ -716,16 +720,10 @@
           </div>
 
         </div>
+      -->
         <!-- /.container-fluid -->
 
-        <!-- Sticky Footer -->
-        <footer class="sticky-footer">
-          <div class="container my-auto">
-            <div class="copyright text-center my-auto">
-              <span>Copyright © Your Website 2018</span>
-            </div>
-          </div>
-        </footer>
+
 
       </div>
       <!-- /.content-wrapper -->
