--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   </head>
 
   <body id="page-top">
+    <a href = "index.html"><img src = "https://i.imgur.com/mX9wXKR.jpg"
+alt ="logo" align ="right"></a>
+
 
     <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
