--- a/info.html
+++ b/info.html
@@ -88,8 +88,10 @@
             <div class="card-body">
               <canvas id="myAreaChart" width="100%" height="30"></canvas>
             </div>
-
           </div>
+
+          <!-- Change structure and time button -->
+          <a class="btn btn-primary btn-lg" href="index.html" role="button">Change Structure or Time</a>
 
         <!-- /.container-fluid -->
         </div>
