--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         </li>
       </ul>
 
+
       <div id="content-wrapper">
 
         <div class="container-fluid">
@@ -140,9 +141,39 @@
   				  </tbody>
   				</table>
           </div>
-
     <!-- row -->
         </div>
+
+        <div class="row justify-content-md-center">
+          <!-- Modal tooltip -->
+                      <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+              Launch demo modal
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    ...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+<!-- /.Row -->
+          </div>
+
 
         <!-- /.container-fluid -->
       </div>
