--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <!-- Modal tooltip -->
                       <!-- Button trigger modal -->
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-              Launch demo modal
+              How to use this site
             </button>
 
             <!-- Modal -->
@@ -156,22 +156,23 @@
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">How to use this website:</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
                   <div class="modal-body">
-                    ...
+                    1. Enter the time you wish to be on campus by. </br>
+                    2. Choose a desired parking lot/structure. </br>
+                    3. Click the submit button. </br>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
                   </div>
                 </div>
               </div>
             </div>
-<!-- /.Row -->
+          <!-- /.Row -->
           </div>
 
 
