--- a/index.html
+++ b/index.html
@@ -118,29 +118,128 @@
   	        	<table class="table table-striped table-bordered" style="width: auto;">
   				  <tbody>
   				    <tr>
-  				      <td>Nutwood Parking Structure</td>
+  				      <td><button type = "button" class = "btn btn-secondary" data-toggle="modal" data-target="#nutwoodModal">Nutwood Parking Structure</button></td>
+
+				    <div class="modal fade" id="nutwoodModal" tabindex="-1" role="dialog" aria-labelledby="nutwoodModalLabel" aria-hidden="true">
+				      <div class="modal-dialog" role="document">
+					<div class="modal-content">
+					  <div class="modal-header">
+					    <h5 class="modal-title" id="nutwoodModalLabel">Nutwood Parking Structure</h5>
+
+					  </div>
+					  <div class="modal-body">
+					    <img src = "https://i.imgur.com/3Uv7asXg.jpg" width="400" height = "475">
+
+
+					  </div>
+					  <div class="modal-footer">
+					    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>					  </div>
+					</div>
+				      </div>
+				    </div>
+
+
   				      <td>100</td>
   				    </tr>
   				    <tr>
-  				      <td>Eastside Parking Structure</td>
+				      <td><button type = "button" class = "btn btn-secondary" data-toggle="modal" data-target="#eastModal">Eastside Parking Structure</button></td>
+
+				    <div class="modal fade" id="eastModal" tabindex="-1" role="dialog" aria-labelledby="eastModalLabel" aria-hidden="true">
+				      <div class="modal-dialog" role="document">
+					<div class="modal-content">
+					  <div class="modal-header">
+					    <h5 class="modal-title" id="nutwoodModalLabel">Eastside Parking Structure</h5>
+
+					  </div>
+					  <div class="modal-body">
+					    <img src = "https://i.imgur.com/OeUcLGd.jpg" width="400" height = "475">
+
+
+					  </div>
+					  <div class="modal-footer">
+					    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>					  </div>
+					</div>
+				      </div>
+				    </div>
+
   				      <td>300</td>
   				    </tr>
   				    <tr>
-  				      <td>State College Parking Structure</td>
+				       <td><button type = "button" class = "btn btn-secondary" data-toggle="modal" data-target="#stateModal">State College Parking Structure</button></td>
+
+				    <div class="modal fade" id="stateModal" tabindex="-1" role="dialog" aria-labelledby="stateModalLabel" aria-hidden="true">
+				      <div class="modal-dialog" role="document">
+					<div class="modal-content">
+					  <div class="modal-header">
+					    <h5 class="modal-title" id="stateModalLabel">State College Parking Structure</h5>
+
+					  </div>
+					  <div class="modal-body">
+					    <img src = "https://i.imgur.com/HEQdyksg.jpg" width="400" height = "475">
+
+
+					  </div>
+					  <div class="modal-footer">
+					    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>					  </div>
+					</div>
+				      </div>
+				    </div>
+
   				      <td>300</td>
   				    </tr>
+
   				    <tr>
-  				      <td>Lot A/G</td>
+				       <td><button type = "button" class = "btn btn-secondary" data-toggle="modal" data-target="#agModal">Lot A/G </button></td>
+
+				    <div class="modal fade" id="agModal" tabindex="-1" role="dialog" aria-labelledby="agModalLabel" aria-hidden="true">
+				      <div class="modal-dialog" role="document">
+					<div class="modal-content">
+					  <div class="modal-header">
+					    <h5 class="modal-title" id="agModalLabel">Lot A/G</h5>
+
+					  </div>
+					  <div class="modal-body">
+					    <img src = "https://i.imgur.com/hzX7zB5.jpg" width="400" height = "475">
+
+
+					  </div>
+					  <div class="modal-footer">
+					    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>					  </div>
+					</div>
+				      </div>
+				    </div>
+
   				      <td>2000</td>
   				    </tr>
-              <tr>
-  				      <td>EvFree Church</td>
+
+				    <tr>
+				       <td><button type = "button" class = "btn btn-secondary" data-toggle="modal" data-target="#evModal">EvFree Church</button></td>
+
+				    <div class="modal fade" id="evModal" tabindex="-1" role="dialog" aria-labelledby="evModalLabel" aria-hidden="true">
+				      <div class="modal-dialog" role="document">
+					<div class="modal-content">
+					  <div class="modal-header">
+					    <h5 class="modal-title" id="evModalLabel">EvFree Church</h5>
+
+					  </div>
+					  <div class="modal-body">
+					    <img src = "https://i.imgur.com/WhXyeYI.jpg" width="475" height = "475">
+
+
+					  </div>
+					  <div class="modal-footer">
+					    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>					  </div>
+					</div>
+				      </div>
+				    </div>
+
   				      <td>2000</td>
   				    </tr>
 
   				  </tbody>
   				</table>
           </div>
+
     <!-- row -->
         </div>
 
