Added actual parking numbers
Added the actual parking lot  available space numbers to index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
     <!-- Dropdown styles -->
 
+    <script src="js/bundle.js"></script>
+
 
   </head>
 
@@ -139,7 +141,7 @@
 				    </div>
 
 
-  				      <td>100</td>
+  				      <td id="Nutwood"></td>
   				    </tr>
   				    <tr>
 				      <td><button type = "button" class = "btn btn-secondary" data-toggle="modal" data-target="#eastModal">Eastside Parking Structure</button></td>
@@ -162,7 +164,7 @@
 				      </div>
 				    </div>
 
-  				      <td>300</td>
+  				      <td id="East"></td>
   				    </tr>
   				    <tr>
 				       <td><button type = "button" class = "btn btn-secondary" data-toggle="modal" data-target="#stateModal">State College Parking Structure</button></td>
@@ -185,7 +187,7 @@
 				      </div>
 				    </div>
 
-  				      <td>300</td>
+  				      <td id="sCollege"></td>
   				    </tr>
 
   				    <tr>
@@ -209,7 +211,7 @@
 				      </div>
 				    </div>
 
-  				      <td>2000</td>
+  				      <td id="AG"></td>
   				    </tr>
 
 				    <tr>
@@ -233,7 +235,7 @@
 				      </div>
 				    </div>
 
-  				      <td>2000</td>
+  				      <td id="Church"></td>
   				    </tr>
 
   				  </tbody>
