--- a/info.html
+++ b/info.html
@@ -96,8 +96,6 @@
         <!-- /.container-fluid -->
         </div>
 
-
-
       </div>
       <!-- /.content-wrapper -->
 
@@ -127,6 +125,11 @@
         </div>
       </div>
     </div>
+
+    <script>
+      //document.getElementById("test").innerHTML = sessionStorage.time;
+      //document.getElementById("test").innerHTML += sessionStorage.structure;
+    </script>
 
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
