--- a/info.html
+++ b/info.html
@@ -92,7 +92,8 @@
 
           <!-- Change structure and time button -->
           <a class="btn btn-primary btn-lg" href="index.html" role="button">Change Structure or Time</a>
-
+          <div id="test">
+          </div>
         <!-- /.container-fluid -->
         </div>
 
@@ -127,8 +128,8 @@
     </div>
 
     <script>
-      //document.getElementById("test").innerHTML = sessionStorage.time;
-      //document.getElementById("test").innerHTML += sessionStorage.structure;
+      document.getElementById("test").innerHTML = sessionStorage.time;
+      document.getElementById("test").innerHTML += sessionStorage.structure;
     </script>
 
     <!-- Bootstrap core JavaScript-->
