--- a/info.html
+++ b/info.html
@@ -23,7 +23,7 @@
     <!-- Custom styles for this template-->
     <link href="css/sb-admin.css" rel="stylesheet">
 
-    <!-- Dropdown styles -->
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 
 
   </head>
@@ -127,10 +127,7 @@
       </div>
     </div>
 
-    <script>
-      document.getElementById("test").innerHTML = sessionStorage.time;
-      document.getElementById("test").innerHTML += sessionStorage.structure;
-    </script>
+    <script src = "js/calc.js"> </script>
 
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -149,7 +146,6 @@
 
     <!-- Demo scripts for this page-->
     <script src="js/demo/datatables-demo.js"></script>
-    <script src="js/demo/chart-area-demo.js"></script>
 
   </body>
 
