--- a/info.html
+++ b/info.html
@@ -77,6 +77,9 @@
             <i class="fas fa-fw fa-dollar-sign"></i>
             <span>Park and Pay Lots</span></a>
         </li>
+        <div class="div-tuffy">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/CSUF_Titans_Logo.svg/1200px-CSUF_Titans_Logo.svg.png">
+        </div>
       </ul>
 
       <div id="content-wrapper">
