--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
             <i class="fas fa-fw fa-dollar-sign"></i>
             <span>Park and Pay Lots</span></a>
         </li>
+        <div class="div-tuffy">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/CSUF_Titans_Logo.svg/1200px-CSUF_Titans_Logo.svg.png">
+        </div>
       </ul>
 
 
@@ -118,7 +121,7 @@
           </div>
 
           <div class="row justify-content-md-center">
-			<a href="info.html"><button onClick="getData()" class="btn btn-primary">Submit</button></a>
+			<a href="info.html"><button onClick="getData()" class="btn btn-lg btn-primary">Submit</button></a>
 		</div>
 
         <div class="row justify-content-md-center">
