--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- Sidebar -->
       <ul class="sidebar-custom sidebar navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="http://parking.fullerton.edu/parking/Maps.php">
+          <a class="nav-link" href="https://parking.fullerton.edu/images/PrintableCampusMapParking.jpg">
 
             <i class="fas fa-fw fa-map"></i>
 
@@ -63,19 +63,19 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://parking.fullerton.edu/parking/">
+          <a class="nav-link" href="https://parking.fullerton.edu/documents/Visitor%20Parking.pdf">
 
             <i class="fas fa-fw fa-ticket-alt"></i>
             <span>Permits</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://parking.fullerton.edu/_documents/parking/RulesAndRegs.pdf">
+          <a class="nav-link" href="https://parking.fullerton.edu/services/">
             <i class="fas fa-fw fa-parking"></i>
             <span>CSUF Parking Rules</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http://parking.fullerton.edu/parking/ParkAndPay.php">
+          <a class="nav-link" href="https://parking.fullerton.edu/documents/Visitor%20Parking.pdf">
             <i class="fas fa-fw fa-dollar-sign"></i>
             <span>Park and Pay Lots</span></a>
         </li>
